package rw.adms.domain.items.enums;

public enum ItemStatus {

    NEW,

    IN_USE,

    NO_LONGER_IN_USE,

    SOLD,

    OUT_OF_STOCK
}