package rw.adms.domain.items.enums;

public enum ItemType {

    ELECTRONICS,

    FURNITURE,

    APPLIANCE,

    OTHER
}
