package rw.adms.domain.tenders.enums;

public enum TenderStatus {
    NOT_PUBLISHED,
    PUBLISHED,
    OVER
}