package rw.adms.domain.tenders.enums;

public enum TenderType {
    REPAIR_TENDER,
    SELLING_TENDER
}