package rw.adms.domain.users.enums;

public enum UserRole {

    SUPERADMIN,

    USER
}
